--- a/plugin/css/chapterUrlsUI.css
+++ b/plugin/css/chapterUrlsUI.css
@@ -81,7 +81,8 @@
 }
 
 /* Input Styling */
-.chapter-list input[type=text] {
+.chapter-list input[type=text],
+.chapter-list input[type=url] {
     width: 100%;
     max-width: none;
     box-sizing: border-box;
@@ -91,7 +92,8 @@
     font-size: 14px;
 }
 
-.chapter-list input[type=text]:focus {
+.chapter-list input[type=text]:focus,
+.chapter-list input[type=url]:focus {
     outline: none;
     border-color: #007bff;
     box-shadow: 0 0 0 2px rgba(0, 123, 255, 0.25);
