Replace separate Select All/Unselect All buttons with single checkbox control
Implements three-state checkbox behavior: unchecked (none selected), checked (all selected), and indeterminate (some selected). Individual checkbox changes automatically update the select all state.

--- a/plugin/css/chapterUrlsUI.css
+++ b/plugin/css/chapterUrlsUI.css
@@ -2,6 +2,31 @@
     padding: 0;
 }
 
+/* Select All Checkbox Styling */
+#selectAllUrlsCheckbox + span {
+    margin-left: 4px;
+    cursor: pointer;
+    user-select: none;
+}
+
+/* Make indeterminate state look unchecked */
+#selectAllUrlsCheckbox:indeterminate {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    width: 13px;
+    height: 13px;
+    border: 2px solid #666;
+    background-color: white;
+    position: relative;
+    cursor: pointer;
+}
+
+#selectAllUrlsCheckbox:indeterminate:focus {
+    outline: 2px solid #0066cc;
+    outline-offset: 1px;
+}
+
 .chapter-section-padding {
     padding: 0 10px;
 }
