--- a/plugin/css/default.css
+++ b/plugin/css/default.css
@@ -180,6 +180,7 @@ textarea.allSpace {
     max-width: 100%;
     max-height: 140px;
     min-width: 100px;
+    cursor: pointer;
 }
 
 #inputSection .field-input input {
